--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "babel-preset-react": "^6.3.13",
     "babel-register": "^6.3.13",
     "css-loader": "^0.23.0",
+    "file-loader": "^0.8.5",
     "hapi": "^11.1.2",
     "hjs-webpack": "^5.1.0",
     "json-loader": "^0.5.4",
     "noisejs": "^2.1.0",
+    "pixi.js": "^3.0.8",
     "postcss-loader": "^0.8.0",
     "socket.io": "^1.3.7",
     "style-loader": "^0.13.0",
     "stylus-loader": "^1.4.2",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   }
