--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack --progress --colors",
-    "deploy": "surge -p public",
+    "deploy": "surge -p public -d best-sponge.surge.sh",
     "yolo": "npm run build; npm run deploy",
     "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,6 +23,8 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-register": "^6.3.13",
+    "chalk": "^1.1.1",
+    "colors": "^1.1.2",
     "css-loader": "^0.23.0",
     "file-loader": "^0.8.5",
     "hapi": "^11.1.2",
@@ -32,10 +34,16 @@
     "pixi.js": "^3.0.8",
     "postcss-loader": "^0.8.0",
     "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7",
     "style-loader": "^0.13.0",
     "stylus-loader": "^1.4.2",
     "url-loader": "^0.5.7",
+    "uuid": "^2.0.1",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-dev-server": "^1.14.0",
+    "winston": "^2.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.8.1"
   }
 }
